WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
91047
Regression (
r122359
) Layout Test html5lib/runner.html is failing
https://bugs.webkit.org/show_bug.cgi?id=91047
Summary
Regression (r122359) Layout Test html5lib/runner.html is failing
Hayato Ito
Reported
2012-07-11 21:27:05 PDT
The following layout test is failing (CRASH) on WebKit Win (dbg), Linux (dbg) and Mac (dbg) on canary. html5lib/runner.html Dashboard:
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#showExpectations=true&tests=html5lib%2Frunner.html
Build Log:
http://build.chromium.org/p/chromium.webkit/builders/Webkit%20Linux%20(dbg)/builds/8961
Stack Trace: crash log for DumpRenderTree (pid 3913): STDOUT: <empty> STDERR: ASSERTION FAILED: m_viewportArguments.type == ViewportArguments::Implicit STDERR: third_party/WebKit/Source/WebCore/dom/Document.cpp(807) : void WebCore::Document::setDocType(WTF::PassRefPtr<WebCore::DocumentType>) STDERR: 1 0x7fa657c1be8b STDERR: 2 0x7fa657c6d604 STDERR: 3 0x7fa657c0389b STDERR: 4 0x7fa657c03a96 STDERR: 5 0x7fa657c0101a STDERR: 6 0x7fa657fb6092 STDERR: 7 0x7fa657fb637d STDERR: 8 0x7fa657fb6d53 STDERR: 9 0x7fa657fda300 STDERR: 10 0x7fa657fda1df STDERR: 11 0x7fa657fda03e STDERR: 12 0x7fa657fd9f65 STDERR: 13 0x7fa657fbbb9c STDERR: 14 0x7fa657fbb5e4 STDERR: 15 0x7fa657fbbf4c STDERR: 16 0x7fa657c2320e STDERR: 17 0x7fa657c23271 STDERR: 18 0x7fa65847435e STDERR: 19 0x23614543a1f3 STDERR: [3913:3913:9529023387827:ERROR:process_util_posix.cc(143)] Received signal 11 STDERR: base::debug::StackTrace::StackTrace() [0x7fa653f68332] STDERR: base::(anonymous namespace)::StackDumpSignalHandler() [0x7fa653fca471] STDERR: 0x7fa64dc15af0 STDERR: WebCore::Document::setDocType() [0x7fa657c1be95] STDERR: WebCore::DocumentType::insertedInto() [0x7fa657c6d604] STDERR: WebCore::ChildNodeInsertionNotifier::notifyNodeInsertedIntoDocument() [0x7fa657c0389b] STDERR: WebCore::ChildNodeInsertionNotifier::notify() [0x7fa657c03a96] STDERR: WebCore::ContainerNode::parserAddChild() [0x7fa657c0101a] STDERR: WebCore::executeTask() [0x7fa657fb6092] STDERR: WebCore::HTMLConstructionSite::executeQueuedTasks() [0x7fa657fb637d] STDERR: WebCore::HTMLConstructionSite::insertDoctype() [0x7fa657fb6d53] STDERR: WebCore::HTMLTreeBuilder::processDoctypeToken() [0x7fa657fda300] STDERR: WebCore::HTMLTreeBuilder::processToken() [0x7fa657fda1df] STDERR: WebCore::HTMLTreeBuilder::constructTreeFromAtomicToken() [0x7fa657fda03e] STDERR: WebCore::HTMLTreeBuilder::constructTreeFromToken() [0x7fa657fd9f65] STDERR: WebCore::HTMLDocumentParser::pumpTokenizer() [0x7fa657fbbb9c] STDERR: WebCore::HTMLDocumentParser::pumpTokenizerIfPossible() [0x7fa657fbb5e4] STDERR: WebCore::HTMLDocumentParser::insert() [0x7fa657fbbf4c] STDERR: WebCore::Document::write() [0x7fa657c2320e] STDERR: WebCore::Document::write() [0x7fa657c23271] STDERR: WebCore::V8HTMLDocument::writeCallback() [0x7fa65847435e] STDERR: 0x23614543a1f3 Probable cause: Woud be
r122359
since it touched VIEWPORT.
Attachments
Patch
(5.44 KB, patch)
2012-07-12 13:59 PDT
,
Adam Barth
tony
: review+
tony
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Hayato Ito
Comment 1
2012-07-11 21:35:54 PDT
Marked it CRASH.
http://trac.webkit.org/changeset/122415
Adam Barth
Comment 2
2012-07-12 13:59:26 PDT
Created
attachment 152050
[details]
Patch
Tony Chang
Comment 3
2012-07-12 14:22:18 PDT
Comment on
attachment 152050
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=152050&action=review
> LayoutTests/fast/viewport/viewport-legacy-xhtmlmp-remove-and-add-expected.txt:2 > +ALERT: viewport size 320x480 scale 1 with limits [1, 5] and userScalable true > +ALERT: viewport size 320x480 scale 1 with limits [1, 5] and userScalable true
Nit: It would be nicer if the test said PASS/FAIL rather than ALERT. Maybe use js-test-pre?
> LayoutTests/fast/viewport/viewport-legacy-xhtmlmp-remove-and-add.html:8 > + XHTML-MP is used for mobile documents which are assumed to be designed for > + handheld devices, hence using the viewport size as the initial containing
Nit: Since this is a dumpAsText test, should we just put this in a <p>?
Adam Barth
Comment 4
2012-07-12 14:28:53 PDT
These are the style of all the tests in this directory. I agree that the style is kind of goofy. I'm not sure whether it's worth making this one test different from the rest.
Tony Chang
Comment 5
2012-07-12 14:31:14 PDT
I don't feel strongly about this one way or another. Feel free to only resolve conflicts and land.
Adam Barth
Comment 6
2012-07-12 14:36:57 PDT
I've filed
https://bugs.webkit.org/show_bug.cgi?id=91150
about improving these tests as a whole.
Adam Barth
Comment 7
2012-07-12 14:41:25 PDT
Committed
r122509
: <
http://trac.webkit.org/changeset/122509
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug