Regression (r122359) Layout Test html5lib/runner.html is failing https://bugs.webkit.org/show_bug.cgi?id=91047

Reviewed by Tony Chang.

Source/WebCore:

This ASSERT is bogus because doctypes can be removed from the DOM and
then re-added.

Test: fast/viewport/viewport-legacy-xhtmlmp-remove-and-add.html

* dom/Document.cpp:
(WebCore::Document::setDocType):

LayoutTests:

Add a test that shows what happens when a doctype gets added and
removed.

* fast/viewport/viewport-legacy-xhtmlmp-remove-and-add-expected.txt: Added.
* fast/viewport/viewport-legacy-xhtmlmp-remove-and-add.html: Added.
* platform/chromium/TestExpectations:


Canonical link: https://commits.webkit.org/108983@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122509 268f45cc-cd09-0410-ab3c-d52691b4dbfc